@@ -1,6 +1,7 @@
 2013-10-25 Pedro Vicente  <pvicente@uci.edu>
 
-	* ncatted: Regressions #6 to 9. Groups, for single variable, all variables, wildcard variables, group attributes
+	* ncatted: Regressions #6 to 10. Groups, for single variable, all variables, wildcard variables, 
+	group attributes, relative and absolute variable names.
 
 2013-10-25  Charlie Zender  <zender@uci.edu>
 
